[tool.poetry]
name = "argo-learning"
version = "0.1.0"
description = ""
authors = ["정승원(SeungWon Jeong)/OnC <seungwon.jeong@wesang.com>"]
readme = "README.md"
packages = [{include = "argo_learning"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
